hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__if_no_false_branch_to_val.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type number, got void",
                span: 1:16; [15, 30],
                level: Error,
            },
        ],
        inputs: (),
    },
)
